# agent-runtime-core

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_runtime/: __init__.py  config.py  interfaces.py  registry.py  runner.py  testing.py
agent_runtime/events/: __init__.py  memory.py  redis.py  sqlite.py
agent_runtime/llm/: __init__.py  anthropic.py  litellm_client.py  openai.py
agent_runtime/persistence/: __init__.py  base.py  file.py  manager.py
agent_runtime/queue/: __init__.py  memory.py  redis.py  sqlite.py
agent_runtime/state/: __init__.py  memory.py  redis.py  sqlite.py
agent_runtime/tracing/: __init__.py  langfuse.py  noop.py
agent_runtime_core/: __init__.py  agentic_loop.py  config.py  config_schema.py  contexts.py  interfaces.py  json_runtime.py  multi_agent.py  privacy.py  registry.py  runner.py  tool_calling_agent.py  tools.py
agent_runtime_core/files/: __init__.py  base.py  ocr.py  processors.py  tools.py  vision.py
agent_runtime_core/llm/: __init__.py  anthropic.py  models_config.py  openai.py
agent_runtime_core/memory/: __init__.py  manager.py  mixin.py
agent_runtime_core/persistence/: __init__.py  base.py  file.py  manager.py
agent_runtime_core/rag/: __init__.py  chunking.py  indexer.py  retriever.py
agent_runtime_core/vectorstore/: __init__.py  base.py  embeddings.py  sqlite_vec.py  vertex.py
tests/: __init__.py  test_contexts.py  test_events.py  test_imports.py  test_llm_anthropic.py  test_memory.py  test_multi_agent.py  test_persistence.py  test_privacy.py  test_queue.py  test_rag.py  test_state.py  test_testing.py  test_tools.py  test_vectorstore.py
