[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-runtime-core"
version = "0.9.2"
description = "Framework-agnostic Python library for executing AI agents with consistent patterns"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    { name = "Chris Barry" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agents", "llm", "runtime", "async"]

dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
litellm = ["litellm>=1.0.0"]
redis = ["redis>=5.0.0"]
langfuse = ["langfuse>=2.0.0"]
# Vector store backends
sqlite-vec = ["sqlite-vec>=0.1.0"]
vertex = ["google-cloud-aiplatform>=1.38.0"]
# File processing
files = [
    "pypdf>=4.0.0",
    "Pillow>=10.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "google-cloud-vision>=3.0.0",
    "boto3>=1.34.0",
    "azure-ai-formrecognizer>=3.3.0",
]
vision = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
]
files-all = [
    "pypdf>=4.0.0",
    "Pillow>=10.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.10",
    "google-cloud-vision>=3.0.0",
    "boto3>=1.34.0",
    "azure-ai-formrecognizer>=3.3.0",
    "google-generativeai>=0.4.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "litellm>=1.0.0",
    "redis>=5.0.0",
    "langfuse>=2.0.0",
    "sqlite-vec>=0.1.0",
    "google-cloud-aiplatform>=1.38.0",
    "pypdf>=4.0.0",
    "Pillow>=10.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.10",
    "google-cloud-vision>=3.0.0",
    "boto3>=1.34.0",
    "azure-ai-formrecognizer>=3.3.0",
    "google-generativeai>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/makemore/agent-runtime-core"
Repository = "https://github.com/makemore/agent-runtime-core"

[tool.hatch.build.targets.wheel]
packages = ["agent_runtime_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "0.9.1"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "0.9.1"
strict = true
